--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
   
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A Selft taught flutter developer, technical writer and open source contributor.">
+  <meta name="description" content="Mobile App developer, Tech Enthusiastic, UI/UX Designer">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -27,7 +27,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Hamza</title>
+  <title>Kushal</title>
   <link rel="manifest" href="manifest.json">
 
   <style>
@@ -39,7 +39,7 @@
     }
 
     .lds-ripple div {
-      background-color: #e64230;
+      background-color: #b5b35c;
       position: absolute;
       border: 4px solid #fff;
       opacity: 1;
